Closed Bug 730148 Opened 12 years ago Closed 12 years ago

Handle OOM better in ValidateIncrementalMarking

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: billm, Assigned: billm)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
There's some suggestion in bug 727334 that ValidateIncrementalMarking may be crashing due to OOM. This patch reorders things so that we deal better with OOM.
Attachment #600217 - Flags: review?(igor)
Comment on attachment 600217 [details] [diff] [review]
patch

Review of attachment 600217 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/jsgc.cpp
@@ +3058,5 @@
>  #ifdef DEBUG
>  static void
>  ValidateIncrementalMarking(JSContext *cx)
>  {
> +    typedef HashMap<Chunk *, uintptr_t *> BitmapMap;

Pre-existing issue: this should not report OOM as the error is not propagated. So replace the typedef with HashMap<Chunk *, uintptr_t *, GCChunkHasher, SystemAllocationPolicy> BitmapMap.
Attachment #600217 - Flags: review?(igor) → review+
https://hg.mozilla.org/mozilla-central/rev/00ab2b295e84
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: