Bug 730148 - Handle OOM better in ValidateIncrementalMarking (r=igor)